# quiver

./: .clangd  CMakeLists.txt  CMakeLists.txt.disabled  README.md  compile.sh  验证工作.md
.cache/clangd/index/: CircuitModel.h.93F5A13D3A6EBB80.idx  CircuitView.h.131C72CC0229B31E.idx  FileView.h.5D90C61A4ED9504D.idx  Main.cpp.ABD05D0972B68E55.idx  Main.h.036A3573C3477A65.idx  ResultView.h.3E75DAAABDFFB4CD.idx  ScriptView.h.56575A72135F250F.idx  View.h.98A90E0930721F59.idx  algo_test.cpp.B55B535924472E38.idx  algorithm.h.D2E5AC16C8124E94.idx  backend.cpp.26513B37FAB7077E.idx  circuit.cpp.027F8C181F3B529E.idx  circuit.cpp.DCCFA842C0CF80F6.idx  circuit.h.9CCB37F20B7AED34.idx  common.cpp.D3C9BC384D5AF431.idx  common.cpp.DB7CED0A913502ED.idx  common.h.7535C930E194A6E2.idx  cpp_qs_test.cpp.9E1D003981088774.idx  (+13 more)
main/: algo_test.cpp  backend.cpp  circuit.cpp  common.cpp  cpp_qs_test.cpp  parser_test.cpp  read_test.cpp  state.cpp  uni_mat.cpp
qs/: order_finding.qs
qs_cpp/: order_finding.cir  order_finding.cpp  order_finding.ddt  order_finding.gdt  order_finding.qse
reference/: ref_file_view.cpp
src/algorithm/: algorithm.h  order_finding.cpp  shor.cpp
src/circuit/: circuit.cpp  circuit.h
src/common/: common.cpp  common.h
src/parser/: iqft.qs  order_finding.qs  parser.cpp  parser.h  qft.qs  qs_cpp.h
src/state/: state.cpp  state.h
src/uni_mat/: uni_mat.cpp  uni_mat.h
ui/: Main.cpp  Main.h  设计文件.md
ui/Model/: CircuitModel.h
ui/View/: CircuitView.cfg  CircuitView.h  FileView.h  ResultView.cfg  ResultView.h  ScriptView.h  Style.css  View.h
validator/: pipe_cli.cpp  pipe_compile.sh  pipe_srv.cpp  pipe_test.h  xpipe_srv  ypipe_cli
